Re-add container > x-component flex fix to prevent welcome screen overlap in split mode

--- a/webui/index.css
+++ b/webui/index.css
@@ -398,6 +398,13 @@ img {
   overflow: hidden;
 }
 
+.container > x-component {
+  display: flex;
+  flex: 1 1 0;
+  min-width: 0;
+  overflow: hidden;
+}
+
 .panel {
   display: -webkit-flex;
   display: flex;
